# davrods

cmake_gentoo/: CMakeLists.txt
cmake_gentoo/cmake_modules/: DefineCMakeDefaults.cmake  RequireOutOfSourceBuild.cmake
src/: config.c
